2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	Adjusted to plugin.c changes,
	removed current plugin id from global state,
	updating information after receiving notifications from plugins
	(instead of rebuilding plugin list after every operation).

	* dialog-plugin-manager.c
	(struct PluginManagerGUI): Removed fields: current_plugin_id,
	button_activate_plugin, button_deactivate_plugin,
	button_activate_all, button_deactivate_all.
	(enum plugin_state_t, activity_description): Removed.
	(cb_pm_button_rescan_directories_clicked):
	Display errors, add new plugins to the model.
	(cb_pm_button_activate_plugin_clicked,
	cb_pm_button_deactivate_plugin_clicked,
	cb_pm_button_activate_all_clicked,
	cb_pm_button_deactivate_all_clicked, free_plugin_id): Removed
	(update_plugin_manager_view): Removed, plugin list initialization
	moved to pm_dialog_init.
	(update_plugin_details_view): Removed, some code moved
	to cb_pm_selection_changed.
	(model_get_plugin_iter, cb_plugin_changed, cb_plugin_destroyed):
	New functions for tracing changes in individual plugins.
	(pm_dialog_cleanup): New, disconnects signals and weak references.
	(cb_active_toggled): New, activates/deactivates plugin on
	CellRenderer's "toggled" signal.

	* plugin-manager.glade:
	(button_activate_plugin, button_deactivate_plugin,
	button_activate_all, button_deactivate_all): Removed.
	(button_rescan_directories): Moved to the last tab.

2002-08-02  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* simulation.glade, dialog-simulation.c: Rename cancel button as
	close button. Removed unique button. Check that first > last round.

2002-07-30  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-simulation.c, simulation.glade: Initial GUI for the risk
	simulation tool. Quite difficult to use still, not completed yet.

2002-07-30  Morten Welinder  <terra@diku.dk>

	* dialog-function-select.c
	(cb_dialog_function_select_fun_selection_changed): Fix signedness
	issues.

2002-07-29  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
